# dotnet-graph

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml  smoke_test.py
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  cli.md  comparison.md  mcp-tools.md  rest-api.md  schema.md
dotnet_graph/: __init__.py  __main__.py  _render.py  api.py  builder.py  cli.py  db.py  explore.py  layers.py  main.py  notes.py  obsidian.py  registry.py  search.py  summaries.py  tours.py
dotnet_graph/analyzer/: FileWalker.cs  Models.cs  Program.cs  RoslynAnalyzer.csproj
dotnet_graph/explore_assets/: index.html
dotnet_graph/skills/: dotnet-analyze.md  dotnet-explore.md  dotnet-note.md  dotnet-search.md
dotnet_graph/tools/: __init__.py  build_tools.py  query.py
tests/: explore_test.py  integration_test.py
tests/fixtures/SampleSolution/Api/: AppSetup.cs
tests/fixtures/SampleSolution/Api/Controllers/: UserController.cs
tests/fixtures/SampleSolution/Core/Models/: User.cs
tests/fixtures/SampleSolution/Core/Services/: IUserRepository.cs  IUserService.cs  UserRepository.cs  UserService.cs
tests/fixtures/SampleSolution/Core/ViewModels/: UserViewModel.cs
